--- a/custom.css
+++ b/custom.css
@@ -39,6 +39,10 @@ a, .alink {
 }
 
 @media (min-width: 768px){
+
+    .page-main {
+        padding: 0px;
+    }
     
     .header.content {
         padding-top:0px;
